--- a/volkswagen.html
+++ b/volkswagen.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" href="styles/volkswagen.css">
+    <link rel="stylesheet" href="styles/mutual_styles.css">
+    <title>Volkswagen html</title>
 
 
 </head>
